Frontpage header fix
overlapping

--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@ Theme Name: FS Company
 Author: Thomas Villain
 Author URI: https://anybodesign.com/
 Description: A WordPress Theme for your company, based on From Scratch.
-Version: 1.3.6
+Version: 1.3.7
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: fs-company
@@ -26,7 +26,14 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 
 #site_head {
-
+	
+	.home & {
+		position: relative;
+		z-index: 100;
+		background-color: #fff;
+	}
+	
+	
 	@include rwd(large) {
 		
 		.home & {
